fix: resolve 13 issues found during code review

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,2 @@
-# Source-specific CMake configuration for milos-qt
+# Source files are now listed in the main CMakeLists.txt
+# This file is kept for potential future use
