--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,16 +11,11 @@ find_package(Qt6 REQUIRED COMPONENTS Core Quick Core5Compat Gui Widgets)
 
 qt_add_executable(milos-qt
     src/main.cpp
-)
-
-qt_add_qml_module(milos-qt
-    URI milos
-    VERSION 1.0
-    QML_FILES
-        qml/main.qml
-        qml/app/MilosQtApplication.qml
-    SOURCES
-        src/
+    src/style/ThemeManager.cpp
+    src/services/AudioService.cpp
+    src/services/SystemMonitor.cpp
+    src/services/NetworkService.cpp
+    src/services/MprisService.cpp
 )
 
 install(TARGETS milos-qt)
