--- a/qml/CMakeLists.txt
+++ b/qml/CMakeLists.txt
@@ -1,9 +1,1 @@
-qt_add_qml_module(milos-qt
-    URI milos
-    VERSION 1.0
-    QML_FILES
-        qml/main.qml
-        qml/app/MilosQtApplication.qml
-    SOURCES
-        src/
-)
+# QML files are handled in the main CMakeLists.txt via qt_add_qml_module
